add expanded and unexpanded classes to the topic li, set opacity to the unexpanded lis

--- a/scss/partials/_topic_list.scss
+++ b/scss/partials/_topic_list.scss
@@ -47,6 +47,10 @@ div.topic-list{
 
     li.topic-row{
 
+      &.unexpanded {
+        opacity: 0.5 !important;
+      }
+
       @include mobile(){
         padding: 0px;
         margin: 0px;
