--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -38,9 +38,9 @@ nav.navbar {
     padding: 0px;
 
     label {
-      font-size: 24px;
-      line-height: 1.5;
-      margin-top: 8px;
+      font-size: 16px;
+      line-height: 24px;
+      margin-top: 11px;
     }
 
     label.opencompany-logo-open{
