--- a/scss/modules/_colors.scss
+++ b/scss/modules/_colors.scss
@@ -1,6 +1,20 @@
-$oc_gray: #ADADAD;
-$oc_green: #26C485;
+$oc_gray: #D8D8D8; //#ADADAD;
+$oc_green: #26C485; //#26C485;
 $oc_red: #d72a46;
-$oc_blue: #109DB7;
+$oc_blue: #007A9D; //#004E64; //#109DB7;
 $oc_black: #000000;
 $oc_white: #ffffff;
+// greens
+$oc_green_dark: #008C54;
+$oc_green_regular: #26C485;
+$oc_green_light: #74E0B4;
+// blues
+$oc_blue_dark: #003848;
+$oc_blue_regular: #004E64;
+$oc_blue_light: #007A9D;
+// Grays
+$oc_gray_0: #FEFEFE;
+$oc_gray_1: #F1F1F1;
+$oc_gray_2: #D8D8D8;
+$oc_gray_3: #8B8A8A;
+$oc_gray_4: #5B5B5B;
