--- a/scss/partials/_composed_section_edit.scss
+++ b/scss/partials/_composed_section_edit.scss
@@ -21,7 +21,7 @@ div.composed-section-edit {
       opacity: 0;
       margin-left: 10px;
       cursor: pointer;
-      color: #109DB7;
+      color: $oc_blue_light;
     }
 
     &:hover i.editable-pen {
