fix finances graph and values colors

--- a/scss/partials/_finances.scss
+++ b/scss/partials/_finances.scss
@@ -2,7 +2,7 @@ div.finances {
 
   div.link-bar {
     a.composed-section-link.active {
-      color: $oc_green;
+      color: $oc_green_light;
     }
   }
 
