--- a/scss/partials/_finances_edit.scss
+++ b/scss/partials/_finances_edit.scss
@@ -12,7 +12,7 @@ div.finances {
     opacity: 0;
     margin-left: -20px;
     cursor: pointer;
-    color: #26C485;
+    color: $oc_green_regular;
   }
 }
 
