--- a/scss/partials/_growth.scss
+++ b/scss/partials/_growth.scss
@@ -1,7 +1,7 @@
 div.growth {
   div.link-bar {
     a.composed-section-link.active {
-      color: #109DB7;
+      color: $oc_blue_light;
     }
   }
 }
