--- a/scss/partials/_new_section_popover.scss
+++ b/scss/partials/_new_section_popover.scss
@@ -113,7 +113,7 @@ div.section-icon-container {
 
   div.section-icon-inner.darkblue svg path,
   div.section-icon-inner.darkblue svg polygon {
-    fill: #004E64;
+    fill: $oc_blue_regular;
   }
 
   div.section-icon-inner.green svg path,
@@ -123,7 +123,7 @@ div.section-icon-container {
 
   div.section-icon-inner.darkblue svg path,
   div.section-icon-inner.darkblue svg polygon {
-    fill: #004E64;
+    fill: $oc_blue_regular;
   }
 
   div.section-icon-inner.lightblue svg path,
