oc standard blue button color

--- a/scss/partials/_oc_buttons.scss
+++ b/scss/partials/_oc_buttons.scss
@@ -33,6 +33,6 @@ button.oc-link {
   width: 60px;
   border-radius: 0px;
   background-color: transparent;
-  color: #109DB7;
+  color: $oc_blue_light;
   margin-top: 30px;
 }
