--- a/scss/partials/_table_of_contents.scss
+++ b/scss/partials/_table_of_contents.scss
@@ -164,7 +164,7 @@ div.table-of-contents div.table-of-contents-inner div.category-section a span.se
 }
 
 div.table-of-contents div.table-of-contents-inner div.category-section a span.section-date {
-  color: #5B5B5B;
+  color: $oc_gray_4;
   font-weight: lighter;
   font-size: 11px;
   margin-bottom: 0px;
