--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -52,7 +52,7 @@ div.topic-list {
       div.topic-date {
         font-size: 13px;
         line-height: 0.8;
-        color: #5b5b5b;
+        color: $oc_gray_4;
         margin-left: 38px;
         padding-top: 16px;
       }
