--- a/scss/partials/_update_footer.scss
+++ b/scss/partials/_update_footer.scss
@@ -75,7 +75,7 @@ div.update-footer {
   }
 
   span.timeago {
-    color: #5B5B5B;
+    color: $oc_gray_4;
     font-size: 13px;
     font-weight: 300;
     float: left;
