add topic growth headline component

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -48,4 +48,5 @@
 @import "partials/_topic_list_edit";
 @import "partials/_loading";
 @import "partials/_topic_body";
-@import "partials/_expanded_topic"
+@import "partials/_expanded_topic";
+@import "partials/_topic_growth_headline";
