--- a/scss/main.scss
+++ b/scss/main.scss
@@ -50,3 +50,4 @@
 @import "partials/_topic_body";
 @import "partials/_expanded_topic";
 @import "partials/_topic_growth_headline";
+@import "partials/_topic_finances_headline";
