active metric pillbox style

--- a/scss/partials/_topic_growth_headline.scss
+++ b/scss/partials/_topic_growth_headline.scss
@@ -15,6 +15,11 @@ div.topic-growth-headline {
     font-size: 14px;
     color: #5b5b5b;
     cursor: pointer;
+
+    &.active {
+      box-shadow: 0 1px 0 0 #d8d8d8;
+      border: solid 0.5px #979797;
+    }
   }
 
   div.topic-headline-inner {
