topic-growth component style

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -51,3 +51,4 @@
 @import "partials/_expanded_topic";
 @import "partials/_topic_growth_headline";
 @import "partials/_topic_finances_headline";
+@import "partials/_topic_growth";
