--- a/scss/mixins/_base.scss
+++ b/scss/mixins/_base.scss
@@ -131,6 +131,7 @@
       box-shadow: 0 1px 0 0 #d8d8d8;
       border: solid 0.5px #979797;
       background-color: #bababa;
+      color: white;
     }
   }
 }
