add oc red colors

--- a/scss/modules/_colors.scss
+++ b/scss/modules/_colors.scss
@@ -18,3 +18,7 @@ $oc_gray_1: #F1F1F1;
 $oc_gray_2: #D8D8D8;
 $oc_gray_3: #8B8A8A;
 $oc_gray_4: #5B5B5B;
+// Reds
+$oc_red_dark: #9E001A;
+$oc_red_regular: #D72A46;
+$oc_red_light: #EC7A8D;
