--- a/scss/main.scss
+++ b/scss/main.scss
@@ -52,3 +52,4 @@
 @import "partials/_topic_growth_headline";
 @import "partials/_topic_finances_headline";
 @import "partials/_topic_growth";
+@import "partials/_d3_column_chart";
