--- a/scss/partials/_d3_column_chart.scss
+++ b/scss/partials/_d3_column_chart.scss
@@ -1,9 +1,23 @@
 svg{
-  rect.chart-bar {
-    cursor: pointer;
+
+  g.chart-g{
+
+    rect.chart-bar {
+      cursor: pointer;
+    }
   }
+
   text.chart-label{
     font-family: $oc_main_font;
     font-size: 24px;
+    font-weight: 500;
+    line-height: 1.5;
+  }
+
+  text.chart-x-label {
+    font-family: $oc_main_font;
+    font-size: 14px;
+    line-height: 1.1;
+    font-weight: bold;
   }
 }
