--- a/scss/main.scss
+++ b/scss/main.scss
@@ -52,4 +52,5 @@
 @import "partials/_topic_growth_headline";
 @import "partials/_topic_finances_headline";
 @import "partials/_topic_growth";
+@import "partials/_topic_finances";
 @import "partials/_d3_column_chart";
