--- a/scss/mixins/_base.scss
+++ b/scss/mixins/_base.scss
@@ -114,7 +114,7 @@
   }
 }
 
-@mixin pillbox(){
+@mixin pillbox($active_pillbox_bg: #bababa){
   label.pillbox {
     margin: 4px 3px;
     padding: 4px 8px;
@@ -130,7 +130,7 @@
     &.active {
       box-shadow: 0 1px 0 0 #d8d8d8;
       border: solid 0.5px #979797;
-      background-color: #bababa;
+      background-color: $active_pillbox_bg;
       color: white;
     }
   }
