--- a/scss/partials/_topic_growth.scss
+++ b/scss/partials/_topic_growth.scss
@@ -1,14 +1,12 @@
 div.section-container{
-  div.pillbox-container{
+  div.pillbox-container.growth{
     background-color: $oc_gray_1;
     padding: 12px;
     border: 1px solid $oc_gray_2;
-    margin: 10px 0;
-
-    @include mobile(){
-      margin-left: -23px;
-      width: calc(100% + 46px);
-    }
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: -23px;
+    width: calc(100% + 46px);
 
     @include pillbox();
   }
