add class for small label when it's too long

--- a/scss/partials/_d3_column_chart.scss
+++ b/scss/partials/_d3_column_chart.scss
@@ -15,6 +15,10 @@ div.d3-column-container{
       font-size: 24px;
       font-weight: 500;
       line-height: 1.5;
+
+      &.small {
+        font-size: 18px;
+      }
     }
 
     text.chart-x-label {
