dot chart style

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -54,3 +54,4 @@
 @import "partials/_topic_growth";
 @import "partials/_topic_finances";
 @import "partials/_d3_column_chart";
+@import "partials/_d3_dot_chart";
