selected pillbox background is oc blue regular

--- a/scss/partials/_topic_growth.scss
+++ b/scss/partials/_topic_growth.scss
@@ -12,6 +12,6 @@ div.section-container{
         text-align: center;
     }
 
-    @include pillbox();
+    @include pillbox($oc_blue_regular);
   }
 }
