--- a/scss/partials/_d3_column_chart.scss
+++ b/scss/partials/_d3_column_chart.scss
@@ -26,6 +26,7 @@ div.d3-column-container{
       font-size: 14px;
       line-height: 1.1;
       font-weight: bold;
+      cursor: pointer;
     }
   }
 }
