--- a/scss/partials/_d3_column_chart.scss
+++ b/scss/partials/_d3_column_chart.scss
@@ -12,10 +12,10 @@ div.d3-column-container{
       font-size: 24px;
       font-weight: 500;
       line-height: 1.5;
+    }
 
-      &.small {
-        font-size: 18px;
-      }
+    text.chart-label.small {
+      font-size: 18px;
     }
 
     text.chart-x-label {
