fix headline style

--- a/scss/partials/_topic_body.scss
+++ b/scss/partials/_topic_body.scss
@@ -81,4 +81,10 @@ div.topic-body {
       height: 90px;
     }
   }
+
+  div.topic-headline {
+    font-weight: 600;
+    font-size: 20px;
+    color: #2d2d2d;
+  }
 }
