--- a/scss/partials/_company_header.scss
+++ b/scss/partials/_company_header.scss
@@ -33,27 +33,25 @@ div.company-header{
 
   div.company-header-internal {
     @include big_web(){
-      padding: 0 70px;
+      padding: 0 185px;
       min-height: 120px;
     }
     
     div.company-header-top {
       padding-top: 22px;
 
-      @include big_web(){
-        float: left;
-        width: 105px;
-      }
-
       div.company-logo-container{
-        margin-left: 15px;
-        width: 70px;
-        height: 70px;
+        width: 200px;
+        height: 100px;
         float: left;
+
+        @include mobile(){
+          margin-left: 40px;
+        }
 
         img.company-logo {
-          max-width: 70px;
-          max-height: 70px;
+          max-width: 200px;
+          max-height: 100px;
         }
       }
 
@@ -102,10 +100,6 @@ div.company-header{
         z-index: 2;
       }
 
-      @include big_web(){
-        margin-left: 100px;
-      }
-
       div.company-name {
         text-align: left;
         color: #2d2d2d;
@@ -114,7 +108,7 @@ div.company-header{
         background-color: inherit;
 
         @include mobile(){
-          padding-left: 20px;
+          padding-left: 40px;
           padding-top: 20px;
           padding-bottom: 9px;
           height: 46px;
@@ -123,7 +117,7 @@ div.company-header{
         }
 
         @include big_web(){
-          padding-top: 30px;
+          padding-top: 10px;
           font-weight: 600;
         }
       }
@@ -140,19 +134,18 @@ div.company-header{
         color: #2d2d2d;
 
         @include mobile(){
-          margin-top: 0px;
+          margin-top: 15px;
           margin-bottom: 20px;
           margin-left: 20px;
           padding-top: 0px;
           font-size: 16px;
-          line-height: 1.2;
+          line-height: 0.5;
         }
 
         @include big_web(){
           width: 355px;
-          padding-top: 10px;
-          padding-left: 105px;
-          padding-bottom: 20px;
+          padding-top: 5px;
+          padding-bottom: 34px;
           font-size: 14px;
           line-height: 1.3;
         }
