--- a/scss/partials/_d3_dot_chart.scss
+++ b/scss/partials/_d3_dot_chart.scss
@@ -3,7 +3,7 @@ div.d3-dot-container{
 
   svg{
 
-    circle.chart-dot {
+    rect.hover-rect {
       cursor: pointer;
     }
 
@@ -23,7 +23,6 @@ div.d3-dot-container{
       font-size: 14px;
       line-height: 1.1;
       font-weight: bold;
-      cursor: pointer;
     }
   }
 
