--- a/scss/mixins/_base.scss
+++ b/scss/mixins/_base.scss
@@ -104,6 +104,19 @@
       text-decoration: none;
     }
 
+    div.arrow{
+      button {
+        font-size: 14px;
+        line-height: 1;
+        color: #5b5b5b;
+        margin: 0;
+        padding: 0;
+        width: auto;
+        border: 0px solid transparent;
+        background-color: transparent;
+      }
+    }
+
     div.previous {
       float: left;
     }
