make sure there is space btw finances values and headline

--- a/scss/partials/_topic_finances_headline.scss
+++ b/scss/partials/_topic_finances_headline.scss
@@ -5,6 +5,7 @@ div.topic-finances-headline {
 
   div.topic-headline-labels{
     width: 100%;
+    height: 52px;
 
     div.finances-metric {
       width: 33%;
