use max width and height for the logo container so it doesn't show white space around it

--- a/scss/partials/_company_header.scss
+++ b/scss/partials/_company_header.scss
@@ -47,8 +47,8 @@ div.company-header{
 
       div.company-logo-container{
         margin-left: 15px;
-        width: 70px;
-        height: 70px;
+        max-width: 70px;
+        max-height: 70px;
         float: left;
 
         img.company-logo {
