topic overlay style

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -55,3 +55,4 @@
 @import "partials/_topic_finances";
 @import "partials/_d3_column_chart";
 @import "partials/_d3_dot_chart";
+@import "partials/_topic_overlay";
