--- a/scss/partials/_topic_overlay.scss
+++ b/scss/partials/_topic_overlay.scss
@@ -10,7 +10,7 @@ $topic_overlay_text_color: #2d2d2d;
     width: 100%;
     height: 100%;
     background-color: rgba(250, 250, 250, 0.7);
-    z-index: 10000;
+    z-index: 1031;
     opacity: 0;
     text-align: center;
     vertical-align: middle;
@@ -68,6 +68,7 @@ $topic_overlay_text_color: #2d2d2d;
           border-bottom: 2px solid $topic_overlay_border_color;
 
           div.topic-overlay-title {
+            border: 1px solid transparent;
             font-size: 26px;
             color: $topic_overlay_text_color;
             line-height: 24px;
@@ -75,6 +76,7 @@ $topic_overlay_text_color: #2d2d2d;
           }
 
           div.topic-overlay-date {
+            margin-top: 2px;
             font-size: 12px;
             color: $topic_overlay_text_color;
             width: 500px;
@@ -92,7 +94,10 @@ $topic_overlay_text_color: #2d2d2d;
           position: relative;
 
           div.topic-overlay-headline {
-            margin-bottom: 30px;
+            border: 1px solid transparent;
+            height: 32px;
+            margin-left: 1px;
+            margin-bottom: 28px;
             font-weight: 600;
             font-size: 20px;
             color: $topic_overlay_text_color;
@@ -116,22 +121,135 @@ $topic_overlay_text_color: #2d2d2d;
 
           @include topic_navigation();
         }
+      }
 
-        div.gradient {
-          position:absolute;
-          z-index:2;
-          right:0; bottom:0; left:0px;
-          width: 660px;
-          height: 50px; /* adjust it to your needs */
-          background: url(data:image/svg+xml;base64,alotofcodehere);
-          background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(255,255,255,1) 70%);
-          background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(70%,rgba(255,255,255,1)));
-          background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
-          background: -o-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
-          background: -ms-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
-          background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
-          pointer-events: none;
+      div.topic-overlay-edit {
+        text-align: left;
+
+        button {
+          background-color: transparent;
+          border: 0px;
+          margin: 0;
+          padding: 0;
+          outline: none;
+          font-size: 12px;
         }
+
+        button.cancel {
+          width: 30px;
+          height: 25px;
+          margin-top: 20px;
+          margin-right: 20px;
+          float: right;
+        }
+
+        button.save-topic {
+          width: 90px;
+          height: 25px;
+          border: 1px solid $oc_gray_3;
+          box-shadow: 1px 1px 1px 0 $topic_overlay_border_color;
+          margin-top: 20px;
+          margin-right: 15px;
+          float: right;
+        }
+
+        div.topic-overlay-edit-header {
+          padding-top: 20px;
+          padding-left: 49px;
+          height: 85px;
+          border-bottom: 2px solid $topic_overlay_border_color;
+
+          input.topic-overlay-edit-title {
+            font-size: 26px;
+            color: $topic_overlay_text_color;
+            line-height: 24px;
+            height: 32px;
+            width: 450px;
+            border: 1px solid transparent;
+
+            &:active, &:focus{
+              border: 1px solid black;
+              outline: none;
+            }
+          }
+
+          div.topic-overlay-date {
+            margin-left: 1px;
+            font-size: 12px;
+            color: $topic_overlay_text_color;
+            width: 500px;
+          }
+
+        }
+
+        div.topic-overlay-edit-content {
+          margin: 10px 0px 10px 0px;
+          padding: 0px 50px 15px 50px;
+          max-height: 515px;
+          height: 100%;
+          overflow: scroll;
+          overflow-y: scroll;
+          position: relative;
+
+          div.topic-overlay-edit-headline-count{
+            float: right;
+            text-align: right;
+            width: 80px;
+            height: 16px;
+            font-size: 14px;
+
+            label.bold{
+              font-weight: bold;
+            }
+          }
+
+          input.topic-overlay-edit-headline {
+            width: 500px;
+            margin-bottom: 30px;
+            font-weight: 600;
+            font-size: 20px;
+            color: $topic_overlay_text_color;
+            border: 1px solid transparent;
+
+            &:active, &:focus{
+              border: 1px solid black;
+              outline: none;
+            }
+          }
+
+          div.topic-overlay-edit-body {
+            margin-top: 1px;
+            font-size: 15px;
+            line-height: 1.7;
+            color: #141312;
+
+            * {
+              font-size: 15px;
+              line-height: 1.7;
+              color: #141312;
+            }
+
+            img {
+              width: 100%;
+            }
+          }
+        }
+      }
+
+      div.gradient {
+        position:absolute;
+        z-index:2;
+        right:0; bottom:0; left:0px;
+        width: 660px;
+        height: 50px; /* adjust it to your needs */
+        background: url(data:image/svg+xml;base64,alotofcodehere);
+        background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(255,255,255,1) 70%);
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(70%,rgba(255,255,255,1)));
+        background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
+        background: -o-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
+        background: -ms-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
+        background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
+        pointer-events: none;
       }
     }
   }
