remove top border of the category nav

--- a/scss/partials/_category_nav.scss
+++ b/scss/partials/_category_nav.scss
@@ -1,7 +1,7 @@
 div.company-dashboard {
 
   div.category-nav {
-    border-top: 1px solid $oc_gray_2; /* gray */
+    border-top: 1px solid transparent; /* gray */
     border-bottom: 1px solid $oc_gray_2; /* gray */
     background-color: white;
     width: 100%;
