move topic-overlay-edit style into its own scss file

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -58,3 +58,4 @@
 @import "partials/_d3_column_chart";
 @import "partials/_d3_dot_chart";
 @import "partials/_topic_overlay";
+@import "partials/_topic_overlay_edit";
