do not show the dialog for internal navigation if the user has not changed anything, move the headline counter to the right of the field

--- a/scss/partials/_topic_overlay.scss
+++ b/scss/partials/_topic_overlay.scss
@@ -195,9 +195,10 @@ $topic_overlay_text_color: #2d2d2d;
           div.topic-overlay-edit-headline-count{
             float: right;
             text-align: right;
-            width: 80px;
+            width: 57px;
             height: 16px;
             font-size: 14px;
+            margin-top: 13px;
 
             label.bold{
               font-weight: bold;
