show link in body while editing and not

--- a/scss/partials/_topic_overlay.scss
+++ b/scss/partials/_topic_overlay.scss
@@ -115,6 +115,10 @@ $topic_overlay_text_color: #2d2d2d;
               color: #141312;
             }
 
+            a {
+              text-decoration: underline;
+            }
+
             img {
               width: 100%;
             }
@@ -235,6 +239,10 @@ $topic_overlay_text_color: #2d2d2d;
               font-size: 15px;
               line-height: 1.7;
               color: #141312;
+            }
+
+            a {
+              text-decoration: underline;
             }
 
             img {
