WIP: big web styling changes.

--- a/scss/partials/_company_header.scss
+++ b/scss/partials/_company_header.scss
@@ -35,8 +35,6 @@ div.company-header{
       padding-top: 22px;
 
       div.company-logo-container{
-        max-width: 200px;
-        max-height: 100px;
         float: left;
 
         @include mobile(){
@@ -45,7 +43,7 @@ div.company-header{
 
         img.company-logo {
           max-width: 200px;
-          max-height: 100px;
+          max-height: 50px;
         }
       }
 
@@ -121,6 +119,14 @@ div.company-header{
 
       @include mobile(){
         width: 100%;
+
+        a.nav-link {
+          display: none;
+        }
+      }
+
+      @include big_web() {
+        padding-bottom: 34px;
       }
 
       div.company-description {
@@ -139,7 +145,6 @@ div.company-header{
         @include big_web(){
           width: 355px;
           padding-top: 5px;
-          padding-bottom: 34px;
           font-size: 14px;
           line-height: 1.3;
         }
