--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,7 +22,6 @@
 @import "partials/_new_section_popover";
 @import "partials/_update_footer";
 @import "partials/_section_selector";
-@import "partials/_all_sections";
 @import "partials/_oc_buttons";
 @import "partials/_company_avatar";
 @import "partials/_user_avatar";
@@ -57,3 +56,4 @@
 @import "partials/_d3_column_chart";
 @import "partials/_d3_dot_chart";
 @import "partials/_topic_overlay";
+@import "partials/_stakeholder_update";
