--- a/scss/partials/_topic_overlay_edit.scss
+++ b/scss/partials/_topic_overlay_edit.scss
@@ -84,6 +84,26 @@ div.topic-overlay-edit {
         margin-left: -50px;
         width: calc(100% + 100px);
       }
+      div.pillbox-container.growth{
+        background-color: $oc_gray_1;
+        padding: 12px;
+        border: 1px solid $oc_gray_2;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        text-align: center;
+
+        @include big_web(){
+          margin-left: -50px;
+          width: calc(100% + 100px);
+        }
+
+        @include mobile(){
+          margin-left: -23px;
+          width: calc(100% + 46px);
+        }
+
+        @include pillbox($oc_blue_regular);
+      }
     }
 
     div.topic-overlay-edit-headline-count{
