--- a/scss/public/css/app.main.scss
+++ b/scss/public/css/app.main.scss
@@ -56,3 +56,5 @@
 @import "partials/_d3_dot_chart";
 @import "partials/_topic_overlay";
 @import "partials/_stakeholder_update";
+@import "partials/_drawer_toggler";
+@import "partials/_side_drawer";
