make topic title font weight 600

--- a/scss/partials/_topic_overlay.scss
+++ b/scss/partials/_topic_overlay.scss
@@ -70,6 +70,7 @@ $topic_overlay_text_color: #2d2d2d;
           div.topic-overlay-title {
             border: 1px solid transparent;
             font-size: 26px;
+            font-weight: 600;
             color: $topic_overlay_text_color;
             line-height: 24px;
             width: 500px;
