--- a/scss/partials/_topic_list_edit.scss
+++ b/scss/partials/_topic_list_edit.scss
@@ -22,66 +22,64 @@ div.topic-list-edit{
     &.last-active-topic {
       border-bottom: 1px solid $oc_gray_3;
     }
-  }
 
-  li.placeholder {
-    height: 68px;
-  }
+    // item component style
 
-  div.topic-edit {
-    min-height: 56px;
-    padding-top: 6px;
-
-    &.active{
-      div.topic-edit-internal{
-        background-color: rgb(255, 255, 255);
-        border: 1px solid rgba(0, 0, 0, 0.2);
-      }
-    }
-
-    div.topic-edit-internal{
-      margin: 0px 10px 0px 10px;
+    div.topic-edit {
       min-height: 56px;
-      border: 1px solid rgba(0, 0, 0, 0.1);
-      background-color: rgb(252, 252, 252);
-      vertical-align: middle;
-      background-image: url("/img/draggable_transparent.png?#{$deploy_key}");
-      background-size: 20px 20px;
-      background-position: center left;
-      background-repeat: no-repeat;
+      padding-top: 6px;
 
-      div.topic-edit-handle {
-        float: left;
+      &.active{
+        div.topic-edit-internal{
+          background-color: rgb(255, 255, 255);
+          border: 1px solid rgba(0, 0, 0, 0.2);
+        }
+      }
+
+      div.topic-edit-internal{
+        margin: 0px 10px 0px 10px;
         min-height: 56px;
-        width: 30px;
-      }
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        background-color: rgb(252, 252, 252);
+        vertical-align: middle;
+        background-image: url("/img/draggable_transparent.png?#{$deploy_key}");
+        background-size: 20px 20px;
+        background-position: center left;
+        background-repeat: no-repeat;
 
-      &:hover{
-        background-color: rgb(253, 253, 253);
-      }
-
-      div.topic-edit-labels{
-        float: center;
-        overflow: hidden;
-
-        h3.topic-title {
-          font-size: 15px;
-          font-weight: bold;
-          margin: 10px 0px 5px 0px;
+        div.topic-edit-handle {
+          float: left;
+          min-height: 56px;
+          width: 30px;
         }
 
-        label.topic-description {
-          font-weight: normal;
-          font-size: 14px;
-          font-family: $oc_main_font;
+        &:hover{
+          background-color: rgb(253, 253, 253);
         }
-      }
 
-      img.check {
-        float: right;
-        margin: 15px 10px 0 0;
-        width: 30px;
-        height: 30px;
+        div.topic-edit-labels{
+          float: center;
+          overflow: hidden;
+
+          h3.topic-title {
+            font-size: 15px;
+            font-weight: bold;
+            margin: 10px 0px 5px 0px;
+          }
+
+          label.topic-description {
+            font-weight: normal;
+            font-size: 14px;
+            font-family: $oc_main_font;
+          }
+        }
+
+        img.check {
+          float: right;
+          margin: 15px 10px 0 0;
+          width: 30px;
+          height: 30px;
+        }
       }
     }
   }
