show revenue if runway is infinite

--- a/scss/partials/_topic_finances_headline.scss
+++ b/scss/partials/_topic_finances_headline.scss
@@ -31,7 +31,7 @@ div.topic-finances-headline {
         padding: 0;
         margin: 0;
 
-        &.cash {
+        &.cash, &.revenue {
           color: $oc_green_regular;
         }
 
