fix scroll jumping when opening cards

--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -22,8 +22,10 @@ html, body {
   background-color: $oc_gray_1;
 }
 
-.no-scroll {
-  overflow: hidden;
+body.no-scroll {
+  overflow-y: scroll;
+  position: fixed;
+  width: 100%;
 }
 
 h1, h2, h3, h4, h5, h6, .oc-header {
