--- a/scss/partials/_topic_list_edit.scss
+++ b/scss/partials/_topic_list_edit.scss
@@ -15,6 +15,12 @@ div.topic-list-edit{
     padding: 0px;
   }
 
+  div.topic-list-separator {
+    height: 1px;
+    margin: 5px;
+    background-color: $oc_gray_3;
+  }
+
   li.topic-list-edit-li {
     border-bottom: 1px solid transparent;
     padding-bottom: 4px;
@@ -33,6 +39,10 @@ div.topic-list-edit{
         div.topic-edit-internal{
           background-color: rgb(255, 255, 255);
           border: 1px solid rgba(0, 0, 0, 0.2);
+          background-image: url("/img/draggable_transparent.png?#{$deploy_key}");
+          background-size: 20px 20px;
+          background-position: center left;
+          background-repeat: no-repeat;
         }
       }
 
@@ -42,12 +52,14 @@ div.topic-list-edit{
         border: 1px solid rgba(0, 0, 0, 0.1);
         background-color: rgb(252, 252, 252);
         vertical-align: middle;
-        background-image: url("/img/draggable_transparent.png?#{$deploy_key}");
-        background-size: 20px 20px;
-        background-position: center left;
-        background-repeat: no-repeat;
 
         div.topic-edit-handle {
+          float: left;
+          min-height: 56px;
+          width: 30px;
+        }
+
+        div.topic-edit-handle-placeholder {
           float: left;
           min-height: 56px;
           width: 30px;
