--- a/scss/partials/_topic_list_edit.scss
+++ b/scss/partials/_topic_list_edit.scss
@@ -13,6 +13,19 @@ div.topic-list-edit{
   ul li{
     margin: 0px;
     padding: 0px;
+    border: 1px solid transparent;
+  }
+
+  ul li:first-child {
+    border-top: 1px solid transparent;
+  }
+
+  ul.dragging li {
+    border-bottom: 1px solid $oc_blue_light;
+  }
+
+  ul.dragging li:first-child {
+    border-top: 1px solid $oc_blue_light;
   }
 
   div.topic-list-separator {
