position side drawer in SU

--- a/scss/partials/_stakeholder_update.scss
+++ b/scss/partials/_stakeholder_update.scss
@@ -51,6 +51,11 @@ div.stakeholder-update {
 
   div.stakeholder-update {
 
+    div.stakeholder-update-drawer {
+      padding-top: 60px;
+      position: relative;
+    }
+
     div.company-header-internal {
       padding: 0 0;
       width: 930px;
