add an icon to the list

--- a/scss/partials/_topic_list_edit.scss
+++ b/scss/partials/_topic_list_edit.scss
@@ -82,6 +82,12 @@ div.topic-list-edit{
           background-color: rgb(253, 253, 253);
         }
 
+        div.svg-icon {
+          float: left;
+          margin-top: 10px;
+          margin-right: 5px;
+        }
+
         div.topic-edit-labels{
           float: center;
           overflow: hidden;
